# yafowil.widget.tiptap

./: .gitignore  CHANGES.rst  LICENSE.rst  Makefile  README.rst  mx.ini  mxmake.yaml  package.json  pyproject.toml  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
js/: karma-coverage.js  karma.conf.js  rollup.conf.js  rollup_tiptap.conf.js  tiptap-bundle.js  wtr.config.mjs
js/src/: actions.js  bundle.js  buttons.js  widget.js
js/src/bootstrap5/: actions.js  buttons.js  widget.js
js/src/bundles/: bootstrap5.js  tiptap.js  widget.js  yafowil.bundle.js
js/src/default/: actions.js  bundle.js  buttons.js  widget.js
js/tests/: test_actions.js  test_buttons.js  test_widget.js
scripts/: coverage.sh  install.sh  styles.sh  test.sh
scss/: bootstrap5.scss  widget.scss
scss/bootstrap5/: widget.scss
src/yafowil/widget/tiptap/: __init__.py  example.py  tests.py  widget.py
src/yafowil/widget/tiptap/resources/: tiptap.dist.bundle.js  tiptap.js  tiptap.min.js  widget.css  widget.css.map  widget.js  widget.js.map  widget.min.js  widget.min.js.map
src/yafowil/widget/tiptap/resources/bootstrap5/: widget.css  widget.js  widget.min.css  widget.min.js
src/yafowil/widget/tiptap/resources/default/: widget.js  widget.min.css  widget.min.js
src/yafowil/widget/tiptap/resources/tiptap/: tiptap-starter-kit.js  tiptap.dist.bundle.js  tiptap.js  tiptap.js.map  tiptap.min.js  tiptap.min.js.map
src/yafowil/widget/tiptap/tests/: test_widget.py
